--- a/KL-divergence.ipynb
+++ b/KL-divergence.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "    for measure in measure_list:\n",
     "        ref_sql = \"select \"+ attribute + \", avg(\" + measure +\") as avg, max(\"+ measure + \") as max, min(\"+ measure + \") as min, sum(\"+ measure + \") as sum, count(\"+ measure + \") as count from adult where marital_status in  ('Married-AF-spouse' , 'Married-spouse-absent', 'Married-civ-spouse')  group by \"+ attribute\n",
     "        query_sql = \"select \"+ attribute + \", avg(\" + measure +\") as avg, max(\"+ measure + \") as max, min(\"+ measure + \") as min, sum(\"+ measure + \") as sum, count(\"+ measure + \") as count from adult where marital_status not in  ('Married-AF-spouse' , 'Married-spouse-absent', 'Married-civ-spouse')  group by \"+ attribute\n",
-    "        sql_dict[(attribute, measure)] = sql\n",
+    "#         sql_dict[(attribute, measure)] = sql\n",
     "        ref_dict[(attribute, measure)] = exec_sql_query(ref_sql)\n",
     "        query_dict[(attribute, measure)] = exec_sql_query(query_sql)\n",
     "        \n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
     "\n",
     "utility_score = {}\n",
     " \n",
-    "for key in sql_dict:\n",
+    "for key in ref_dict:\n",
     "    attribute, measure = key\n",
     "    ref_view = ref_dict[key]\n",
     "    query_view = query_dict[key]\n",
@@ -142,22 +142,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "\n",
-    "with open('ref_data.pickle', 'wb') as handle:\n",
-    "    pickle.dump(ref_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "       \n",
     "    \n",
-    "with open('query_data.pickle', 'wb') as handle:\n",
-    "    pickle.dump(query_dict, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "with open('ref_data.pickle', 'rb') as handle:\n",
+    "    ref_data = pickle.load( handle)\n",
     "    \n",
-    "with open('utility_score.pickle', 'wb') as handle:\n",
-    "    pickle.dump(utility_score, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "with open('query_data.pickle', 'rb') as handle:\n",
+    "    query_data = pickle.load(handle)\n",
+    "    \n",
+    "with open('utility_score.pickle', 'rb') as handle:\n",
+    "    utility_score = pickle.load(handle)\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Abhinav Shaw\\Anaconda3\\python.exe\n",
+      "3.6.4 |Anaconda, Inc.| (default, Jan 16 2018, 10:22:32) [MSC v.1900 64 bit (AMD64)]\n",
+      "sys.version_info(major=3, minor=6, micro=4, releaselevel='final', serial=0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# display(ref_data[('age', 'age')])\n",
+    "import sys\n",
+    "print(sys.executable)\n",
+    "print(sys.version)\n",
+    "print(sys.version_info)"
    ]
   }
  ],
